# clip.cpp

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/image-search/: CMakeLists.txt  build.cpp  search.cpp
